# molten-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt
examples/gfx-deferred-renderer/: CMakeLists.txt  main.cpp
examples/gfx-hello-triangle/: CMakeLists.txt  main.cpp
examples/gfx-multi-render-target/: CMakeLists.txt
examples/gfx-multi-render-target/assets/shaders/: gbuffer.frag  gbuffer.vert
examples/gfx-multi-render-targets/: CMakeLists.txt  main.cpp
examples/gfx-textured-cube/: CMakeLists.txt  main.cpp
molten-core/: CMakeLists.txt
molten-core/include/: engine.h  image.h  renderer.h  shader.h  transform_3d.h
molten-core/include/gfx/: renderer.h
molten-core/src/: asset_manager.cpp  asset_manager.h  deferred_voxel_renderer.cpp  deferred_voxel_renderer.h  engine.cpp  gpu_resources.h  image.cpp  pool.cpp  pool.h  shader.cpp  shapes.h  transform_3d.cpp  vox_scene.cpp  vox_scene.h
molten-core/src/gfx/: CmakeLists.txt  gl_renderer.cpp  gl_renderer.h  gl_utils.h  main.cpp  renderer.cpp  renderer.h  vk_renderer.cpp  vk_renderer.h  vk_utils.cpp  vk_utils.h
molten-editor/: CMakeLists.txt
molten-editor/src/: main.cpp
molten-gfx/: CMakeLists.txt
molten-gfx/include/gfx/: renderer.h
molten-gfx/src/: gl_renderer.cpp  gl_renderer.h  gl_utils.h  renderer.cpp  vk_renderer.cpp  vk_renderer.h
molten-runtime/: CMakeLists.txt
molten-runtime/assets/shaders/: gbuffer.frag  gbuffer.vert  screen_quad.frag  screen_quad.vert
molten-runtime/src/: main.cpp
src/: main.cpp
